# ptijson

./: .gitignore  README.md  demo.cast  pyproject.toml
ijson/: __init__.py
ptijson/: __init__.py
